samples/grpc-responder/config/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-responder
  labels:
    app: grpc-responder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-responder
  template:
    metadata:
      labels:
        app: grpc-responder
    spec:
      containers:
      - name: grpc-responder
        image: ghcr.io/kedify/sample-grpc-responder
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50051
        volumeMounts:
        - name: certs
          mountPath: /certs
      volumes:
      - name: certs
        secret:
          secretName: grpc-responder
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-responder
spec:
  selector:
    app: grpc-responder
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
  type: ClusterIP
