samples/grpc-responder/config/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-responder
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/use-http2: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grpc.keda
    secretName: grpc-responder
  rules:
  - host: grpc.keda
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpc-responder
            port:
              number: 50051
