samples/grpc-responder/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-responder
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: grpc.keda
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpc-responder
            port:
              number: 50051
